import { MetadadosDocumentoCNPJ } from "../types/metadados-documento-cnpj";
import { DocumentoBase } from "./documento-base";

export interface CNPJ extends DocumentoBase<MetadadosDocumentoCNPJ> {}
