import { MetadadosDocumentoCPF } from "../types/metadados-documento-cpf";
import { DocumentoBase } from "./documento-base";

export interface CPF extends DocumentoBase<MetadadosDocumentoCPF> {}
