export interface GeradorNumerosAleatorios {
  gerar(base: number, limite: number): number;
}
