export interface ValidadorDocumento {
  validar(documento: string): boolean;
}
