export type MetadadosDocumento = {}